Fixes #974 : Info icon on participants become -black- invisible on scroll over

--- a/css/hover-media-links.css
+++ b/css/hover-media-links.css
@@ -27,6 +27,6 @@
     transition: all 0.6s;
 }
 .mentor-list .single-mentor .social-overlay-list a:hover i{
-    color:black;
+    color: #bebebe;
     transition: all 0.6s;
 }
